--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
       <canvas style="position: relative; margin: auto; height: 200px; width: 90vw" id="wind"></canvas>
     </div>
     <div>
+      <canvas style="position: relative; margin: auto; height: 200px; width: 90vw" id="pressure"></canvas>
+    </div>
+    <div>
       <canvas style="position: relative; margin: auto; height: 200px; width: 90vw" id="precip"></canvas>
     </div>
     <div>
