--- a/src/index.html
+++ b/src/index.html
@@ -3,21 +3,21 @@
   <head>
     <title>Weather</title>
   </head>
-  <body style="background: #1D1F20; padding: 16px">
+  <body style="background: #1D1F20">
     <div>
-      <canvas style="position: relative; margin: auto; height: 200px; width: 90vw" id="temp"></canvas>
+      <canvas style="position: relative; height: 200px; width: 90vw" id="pos0"></canvas>
     </div>
     <div>
-      <canvas style="position: relative; margin: auto; height: 200px; width: 90vw" id="wind"></canvas>
+      <canvas style="position: relative; height: 200px; width: 90vw" id="pos1"></canvas>
     </div>
     <div>
-      <canvas style="position: relative; margin: auto; height: 200px; width: 90vw" id="pressure"></canvas>
+      <canvas style="position: relative; height: 200px; width: 90vw" id="pos2"></canvas>
     </div>
     <div>
-      <canvas style="position: relative; margin: auto; height: 200px; width: 90vw" id="precip"></canvas>
+      <canvas style="position: relative; height: 200px; width: 90vw" id="pos3"></canvas>
     </div>
     <div>
-      <canvas style="position: relative; margin: auto; height: 200px; width: 90vw" id="solar"></canvas>
+      <canvas style="position: relative; height: 200px; width: 90vw" id="pos4"></canvas>
     </div>
 
     <script type="module" src="chart.js"></script>
